--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ button{
 
 a{
     text-decoration: none;
-    z-index: 10;
+    z-index: 999;
 }
 
 @-webkit-keyframes arrow{
@@ -102,9 +102,6 @@ a{
         opacity: .3;
     }
 }
-
-a:focus{outline: 0;}
-
 .goTo{
     width: 200px;
     height: 100px;
@@ -400,7 +397,6 @@ a:focus{outline: 0;}
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.842);
-    z-index: 2;
     opacity: 0;
     -webkit-transition: opacity 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     -o-transition: opacity 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -532,11 +528,6 @@ a:focus{outline: 0;}
 }
 
 .project .mask{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     opacity: .1;
 }
 
